--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost/factura?serverTimezone=America/Santiago&createDatabaseIfNotExist=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/licencia_schema?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost/factura?serverTimezone=America/Santiago
 spring.datasource.username=root
 spring.datasource.password=sasa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-#spring.mvc.view.prefix=/WEB-INF/
-#spring.mvc.view.suffix=.jsp
-spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=TRACE
-spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=debug
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.jpa.open-in-view=false
