--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.open-in-view=true
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.media-types.pdf=application/pdf
