--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.open-in-view=true
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.media-types.pdf=application/pdf
+spring.mvc.contentnegotiation.media-types.xlsx=application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
